--- a/PAG.vcxproj.filters
+++ b/PAG.vcxproj.filters
@@ -74,4 +74,9 @@
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="texture.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
