--- a/PAG.vcxproj.filters
+++ b/PAG.vcxproj.filters
@@ -118,6 +118,24 @@
     <None Include="Shaders\shader.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="depthShader.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="depthShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="debugQuad.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="debugQuad.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\shadowShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\shadowShader.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="texture.jpg">
