--- a/PAG.vcxproj
+++ b/PAG.vcxproj
@@ -203,12 +203,15 @@
     <None Include="debugQuad.frag" />
     <None Include="debugQuad.vert" />
     <None Include="depthShader.frag" />
-    <None Include="depthShader.vert" />
     <None Include="Shaders\bloomShader.frag" />
     <None Include="Shaders\bloomShader.vert" />
     <None Include="Shaders\blurShader.frag" />
+    <None Include="Shaders\blurShader.vert" />
+    <None Include="Shaders\debugQuad.vert" />
+    <None Include="Shaders\depthShader.vert" />
     <None Include="Shaders\finalBloomShader.frag" />
     <None Include="Shaders\finalBloomShader.vert" />
+    <None Include="Shaders\lightShader.frag" />
     <None Include="Shaders\reflection.frag" />
     <None Include="Shaders\reflection.vert" />
     <None Include="Shaders\shader.frag" />
